# Multi-agent

./: .env.example  PROJECT_DESCRIPTION.md  README.md  agent 设计.md  pyproject.toml  requirements.txt
config/: __init__.py  azure_config.py  qwen_config.py  settings.py
core/: __init__.py
core/base/: agent.py  message.py  pattern.py
core/memory/: __init__.py  memory_store.py  vector_store.py
core/services/: azure_service.py  embedding_service.py  llm_service.py  qwen_service.py  sk_azure_service.py  sk_qwen_service.py
examples/: __init__.py  sk_basic_demo.py  sk_reflection_demo.py
examples/patterns_demo/: reflection_demo.py
patterns/: __init__.py
patterns/reflection/: __init__.py  reflection_agent.py  reflection_pattern.py
